--- a/CDMasonryUsageDemo/自动计算高度/dataSourceList.plist
+++ b/CDMasonryUsageDemo/自动计算高度/dataSourceList.plist
@@ -6,7 +6,7 @@
 		<key>imageName</key>
 		<string>home_know_btn1</string>
 		<key>title</key>
-		<string>便捷的黄金购买平台</string>
+		<string>便捷的黄金购买平台保证交易公平公正</string>
 		<key>detail</key>
 		<string>关注微信公众号&quot;金度黄金&quot;,
 点击&quot;买黄金&quot;即可方便快捷购买黄金。</string>
